css/style.css
 * {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

body {
  font-family: Roboto,Arial,sans-serif;
  letter-spacing: 0;
  text-decoration: none;
  color: rgb(33,33,33);
  min-height: 140vh;
  background: #f1f3f6;
  line-height: 1.4;
  font-size: 14px;
}

.card{
  border: none;
  border-radius: 0%;
}

.margin-top{
  margin-top: 2px;
}

.flex {
  display: flex;
}

.fa {
  margin: 0;
}

.fa-angle-down {
  margin: 0;
  font-weight: lighter;
}

.fa-user {
  border-radius: 50%;
}

.heading-navigation {
  background-color: rgb(40, 116, 240);
  width: 100%;
  height: 80px;
  position: sticky;
  top: 0;
  z-index: 2;
}

.nav-container {
  align-items: center;
  max-width: 1248px;
  margin: auto;
  width: 100%;
  position: relative;
  left: 30px;
}

.logo {
  flex-direction: column;
  width: fit-content;
}
.anchor {
  cursor: pointer;
  text-decoration: none;
  color: whitesmoke;
}
.flip_logo img {
  width: 100px;
}
.anchor {
  font-size: 15px;
  font-style: italic;
  margin-top: -3px;
}
.plus img {
  width: 15px;
  margin-top: -7px;
}
.plus-txt {
  color: #ffe500;
  margin: 0px 2px;
  font-weight: bold;
}
.search-bar-container {
  min-width: 304px;
  width: 708px;
}
.search-bar {
  max-width: 700px;
  width: 100%;
  margin-left: 10px;
  box-shadow: 0px 2px 4px 1px rgb(0, 0, 0, 0.23);
}
.search-box {
  outline: none;
  padding: 0px 16px;
  height: 45px;
  border-radius: 2px 0px 0px 2px;
  border: 0;
  width: 100%;
  font-size: 14px;
}
.btn-search {
  background: #fff;
  border: 1px solid #fff;
  padding: 4px 12px 4px 8px;
  width: 44px;
  height: 45px;
  cursor: pointer;
  border-radius: 0px 2px 2px 0px;
  color: #2874f0;
  font-size: 19px;
}
.none {
  display: none;
}

.login {
  position: relative;
  left: 45px;
}
.login-btn {
  color: #2874f0;
  border-radius: 2px;
  border: 1px solid #fff;
  background: #fff;
  letter-spacing: 1px;
  height: 44px;
  padding: 10px 50px;
  font-weight: bold;
  margin: 0px 20px;
  cursor: pointer;
  text-decoration: none;
  font-size: 16px;
}
.more,
.cart {
  position: relative;
  left: 45px;
}

.more-text, .cart-text {
  color: #fff;
  font-weight: bold;
  margin: 0px 20px;
  cursor: pointer;
  font-size: 20px;
}

.head-cat p{
  font-family: Roboto, Arial, sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 20px;
  text-align: center;
  white-space: nowrap;
}


.head-cat{
  display: flex;
  flex-direction: column;
  margin-left: 30px;
  margin-right: 30px;
}

.head-line{
  border-bottom: 2px solid lightgray;
  box-shadow: rgb(177 174 174) 3px 3px 9px -3px;
  width: 100%;
}

.head-cat:hover {
  cursor: pointer;
  color: #2874f0;
}

.ca-image {
  height: 90px;
  width: 90px;
  margin-bottom: 3px;
}

.deals-of-the-day-text {
  display: flex;
  font-family:Roboto,Arial,sans-serif;
  font-weight: 400;
  font-size: 30px;
  line-height: 41px;
  position: relative;
}

.deals-of-the-day-timer{
  position: relative;
  left: 17px;
  top:10px;
  font-weight: 400;
  line-height: 20px;
  font-size: 22px;
  color: #a0a0a0;
}


.img-fluid{
  position:relative;
  width: 100%;
  height:467px;
  cursor: pointer;
}

/* .col-sm-8,.col-sm-10{
  margin-top: 10px;
  padding: 30px;
  box-shadow: rgb(177 174 174) 3px 3px 9px -3px;
} */

.btn-view-all {
  color: #fff;
  border-radius: 2px;
  border: 1px solid #2874f0;
  position: relative;
  top:4px;
  right: 5px;
  background: #2874f0;
  letter-spacing: 1px;
  height: 40px;
  width: 120px;
  padding: 5px 20px;
  font-weight: bold;
  /* margin: 0px 20px; */
  cursor: pointer;
  text-decoration: none;
  font-size: 16px;
}


.deals-of-the-day-item img {
 height: 250px; 
 max-height: 100%;
 max-width: 100%;
 opacity: 1;
}
.deals-of-the-day-item{
  text-align: center;
}

.deals-of-the-day-item .title {
    margin-top: 20px;
    font-size: 20px;
    font-style: normal;
    font-weight: 500;
    line-height: 20px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.deals-of-the-day{
  margin-top: 1.5px;
}

.box-shadow-1{
  /* box-shadow: rgb(177 174 174) 3px 3px 9px -3px; */
  padding: 20px;
}
.box-shadow-2{
  /* box-shadow: rgb(177 174 174) 3px 3px 9px -3px; */
  padding: 10px;
}

.deals-of-the-day-item .price {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  color: rgb(56, 142, 60);
  line-height: 22px;
}

.deals-of-the-day-item .desc {
  font-weight: 400;
  line-height: 20px;
  font-size: 14px;
  color: rgb(125,128,146);
}

.more:hover .fa-angle-down::before {
  content: "\f106";
}

.heading-item-name:hover .fa-angle-down::before {
  content: "\f106";
}

.login-dropdown{
    position: relative;
    top: 12px;
}

.login-dropdown-list{
    position: absolute;
    left: 50px;
    top: 10px;
    list-style: none;
    background-color: #fff;
    width: max-content;
    padding: 10px;
    box-shadow: 0 4px 16px 0 rgb(0, 0, 0, 0.20);
    transform: translate(-30px);
}
.login-drop-li{
    padding: 16px 20px;
    border-bottom: 1px solid #f0f0f0;
    font-size: 14px;
    cursor: pointer;
}

.login-drop-li:hover{
    background: #fafafa;
}
.pointer{
    width: 20px;
    height: 20px;
    background: #fff;
    transform: rotate(45deg);
    position: absolute;
    top: px;
    left: 50%;
}
.login:hover .login-dropdown{
    display: block;
}

.login:hover .login-btn{
  transition: none;
}

.teddy{
  position: relative;
  left: 30px;
}

.one{
  position: relative;
  right: 313px;
}
.elect{
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: 50px;

}

